0.2.12
- Fixed issue with pasting over selection (issue #64)

0.2.11.1 (2025-02-14)
- Plugin breaks access to the settings screen (issue #63)
- Database module dependency issue (issue #62)

0.2.11 (2025-02-08)
- Added Base 64 conversion
- Added option for inspector input fields font
- Added icon set support
- Added more languages (de, cs, fr, it, pt, pl, ru)
- Fixed write-unsafe context (issue #60)

0.2.10.1 (2024-04-13)
- Fixed issue with null default font (issue #58)

0.2.10 (2024-04-08)
- Added support for language switching (zh, jp, ko)
- Added support for basic macro
- Reworked search toolbar UI
- Updates for IntelliJ API changes (issue #55 #56)

0.2.9 (2023-11-24)
- Added convert data action
- Added support for bookmarks
- Added clipboard content tool
- Added drag&drop content tool
- Fixed issue with BOM headers with native file wrapper (issue #52)
- Partial mitigation to file locking issue (issue #34)

0.2.8.1 (2023-05-25)
- Fixed plugin breaks VCS history log reading (Issue #51)

0.2.8 (2023-05-19)
- Added edit as binary action for columns in database view
- Added byte-to-byte compare diff option
- Added integration options page
- Reworked save on close
- Added reload file action (issue #49)
- Fixed illegal argument exception (issue #50)

0.2.7 (2022-12-08)
- Added byte array support for some fields for Rider/CLion/GoLand (debug tree child nodes extraction)
- Minor layout fix (issue #45)
- Fixed settings save (issue #44)
- Fixed event context does not match assertion (issue #43)
- Fixed User Data exception (issue #42)

0.2.6 (2022-05-22)
- Fixed native file mode (issue #39)
- Added options page
- Added action for online help/manual
- Added edit selection action
- Added API: view binary data

0.2.5 (2021-11-06)
- New app icon
- Added templates for profiles
- Added insert data dialog
- Added files compare dialog
- Fixed issues with binary file type (issue #36)
- Fixed issue with transparency (issue #38)
- Fixed issue with opening zip files

0.2.4 (2021-04-11)